# openlimits-python

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config
.github/workflows/: build.yml
examples/: openlimits-python-example.ipynb
src/: lib.rs
tests/: simple.py
