[package]
name = "nash-python"
version = "0.1.0"
authors = ["Ethan Fast <ejhfast@gmail.com>"]
edition = "2018"

[lib]
name = "nash_python"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
rust_decimal = "1.7.0"
openlimits = { version = "*", path = "../openlimits-nash/openlimits" }
