[package]
name = "openlimits-python"
version = "0.1.0"
authors = ["Ethan Fast <ejhfast@gmail.com>"]
edition = "2018"

[lib]
name = "openlimits_python"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
rust_decimal = "1.7.0"
openlimits = { git = "https://github.com/nash-io/openlimits", features=["python"] }
