[package]
name = "openlimits-python"
version = "0.1.0"
authors = ["Ethan Fast <ejhfast@gmail.com>"]
edition = "2018"

[lib]
name = "openlimits_python"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "=0.12.4"
features = ["extension-module"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
rust_decimal = "1.7.0"
openlimits = { version = "0.1.19", default-features = false, features = ["num_bigint", "python"] }
